--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
 node_modules
-dist
-package-lock.json
-*.zip
+/dist
+
 
 # local env files
 .env.local
@@ -22,5 +21,3 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-
