--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.2",
