--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --fix"
+    "lint": "vue-cli-service lint",
+    "ls-lint": "npx ls-lint"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^5.1.5",
+    "@ls-lint/ls-lint": "^1.9.2",
     "ant-design-vue": "^2.0.0-beta.11",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.6",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
