--- a/package.json
+++ b/package.json
@@ -6,7 +6,26 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "ls-lint": "npx ls-lint"
+    "ls-lint": "npx ls-lint",
+    "list:eslint": "eslint --ext .js,.vue src",
+    "lint:stylelint": "stylelint src/**/* --cache --cache-location node_modules/.cache/stylelint/ --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "ls-lint && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{vue,css,scss}": [
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
+    ],
+    "src/**/*.{js,vue}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add -A"
+    ]
   },
   "dependencies": {
     "@ant-design/icons-vue": "^5.1.5",
@@ -32,9 +51,18 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.1",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.0-0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "stylelint": "^13.7.2",
+    "stylelint-config-recess-order": "^2.3.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0"
   },
   "browserslist": [
     "> 1%",
