--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "ls-lint && lint-staged"
+      "pre-commit": "ls-lint && lint-staged",
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
@@ -42,6 +43,8 @@
     "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -60,6 +63,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0"
