--- a/.env.development
+++ b/.env.development
@@ -7,4 +7,4 @@ VUE_APP_ENV = 'development'
 
 # 本地开发环境请在
 
-VUE_APP_BASE_API = '//49.232.108.188:5001'
+VUE_APP_BASE_API = 'http://172.21.31.38:6060'
