--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "ls-lint": "npx ls-lint",
@@ -34,7 +35,7 @@
     "ant-design-vue": "^2.0.0-beta.11",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.9.7",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
